[package]
name = "ppot-rs"
version = "0.1.1"
edition = "2021"
authors = ["Koh Wei Jie <wj@geometry.xyz>"]
license = "MIT"
keywords = ["snarkjs", "ptau", "zksnark", "crypto"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
description = "A Rust crate for reading .ptau (powers of tau) files compatible with snarkjs"

[dependencies]
ark-bn254 = "^0.3.0"
ark-ff = { version = "^0.3.0", default-features = false }
byteorder = "1.4.3"

[dev-dependencies]
hex = "0.4.3"
